events page updated for week of 2/13

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 5 February 2017</span>
+                                        <span class="data">Last Updated: 12 February 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -117,36 +117,29 @@
 							 <ul class="tales-list">
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
-								<li>2/6: CROW Forum: "Teaching While Black - Oh, and a Woman", Room 287, Rod Library, Monday, February 6, 2017 - 12:00 pm</li>
-								<li>2/6: The Power of Social Imagination in Higher Ed: The Role of the Arts in Bridging Community Engagement &amp; Education, Room 378, Rod Library, Monday, February 6, 12:00 pm to 1:00 pm</li>
-								<li>2/6: The Digital Meetup: An Easier Way to Team Teach, Room 378, Rod Library, Monday, February 6 - 3:30 pm to 4:30 pm</li>
-								<li>2/6: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, February 6, 2017 - 5:00 pm</li>
-								<li>2/7: Information Literacy for Graduate Students: Everything a Graduate Student Should Know Before Starting a Research Project, Room 373, Rod Library, Tuesday, February 7, 2017 - 10:00 am to 11:30 am</li>
-								<li><a href="https://uni.co1.qualtrics.com/jfe/form/SV_8AKJQFTP0pbu2i1">2/7: An Introduction to Qualtrics, Bengtson Auditorium, Russell Hall, Tuesday, February 7, 2017 - 2:00 pm</a></li>
-								<li>2/7: Information Literacy for Graduate Students: Everything a Graduate Student Should Know Before Starting a Research Project, Room 373, Rod Library, Tuesday, February 7, 2017 - 6:00 pm to 7:30 pm</li>
-								<li>2/7: Real Community Hot Mic Night, Great Reading Room, Seerley Hall, Tuesday, February 7, 2017 - 7 pm <b>You should go with me. Earn a check plus!!</b></li>
-								<li>2/8: Wheaton Wellness Session: Chronic Pain, Room 009, Gilchrist Hall, Wednesday, February 8, 2017 - 12:00 pm</li>
-								<li><a href="https://uni.co1.qualtrics.com/jfe/form/SV_8AKJQFTP0pbu2i1">2/8: An Introduction to Qualtrics, Room 102, Sabin Hall, Wednesday, February 8, 2017 - 12:00 pm</a></li>
-								<li>2/8: CETL Series: Working with Small Groups in the Classroom: Peer Review as a Strategy for Improving Students' Writing Process, Room 378, Rod Library, Wednesday, February 8, 2017 - 12:00 pm to 1:00 pm</li>
-								<li>2/8: Avoiding Plagiarism, Room 301, Rod Library, Wednesday, February 8, 2017 - 3:00 pm to 5:00 pm</li>
-								<li>2/8: Men's Basketball vs. Southern Illinois, McLeod Center, Wednesday, February 8, 2017 - 7:00 pm</li>
-								<li><a href="https://unialum.org/events/webinar-your-true-colors">2/8: Webinar: Your True Colors, Web (It's Online), Wednesday, February 8, 2017 - 7:00 pm to 8:00 pm</a></li>
-								<li>2/8: Citizenship Film Series: Freedom Summer, Auditorium, Center for Energy and Environmental Education, Wednesday, February 8, 2017 - 7:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events">2/8: Faculty Recital: Alexander Pershounin, double bass, Davis Hall, GBPAC, Wednesday, February 8, 2017 - 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">2/9 ALL DAY: Northern Festival of Bands, Great Hall, GBPAC, Thursday, February 9, 2017 (All day) to Saturday, February 11, 2017 (All day)</a></li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/9: Planetarium Show, Room 105, Latham Hall, Thursday, February 9, 2017 - 7:00 pm to 7:40 pm</a></li>
-								<li><a href="https://www.uni.edu/studentlife/cab">2/9: Concert: The Maine with 4 Door Theatre and The Hex Girls, Old Central Ballroom, Maucker Union, Thursday, February 9, 2017 - 7:30 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/9: Planetarium Show, Room 105, Latham Hall, Thursday, February 9, 2017 - 8:00 pm to 8:40 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">2/10: Northern Iowa Bach Cantata Series Performance, McElroy Lobby, GBPAC, Friday, February 10, 2017 - 12:15 pm</a></li>
-								<li>2/10: UNI Women's Basketball vs. Bradley, McLeod Center, Friday, February 10, 2017 - 7:00 pm</li>
-								<li>2/10: UNI Wrestling vs. Buffalo, West Gym, Friday, February 10, 2017 - 7:00 pm</li>
-								<li>2/10: Midnight Under the Moon: ISA Valentine Dance, Old Central Ballroom, Maucker Union, Friday, February 10, 2017 - 8:00 pm</li>
-								<li><a href="https://uni.edu/theatre/">2/11: TheatreUNI presents: Palette of Possibility, Strayer-Wood Theatre, Saturday, February 11, 2017 - 10:30 am</a></li>
-								<li><a href="https://uni.edu/theatre/">2/11: TheatreUNI presents: Palette of Possibility, Strayer-Wood Theatre, Saturday, February 11, 2017 - 2:00 pm</a></li>
-								<li><a href="https://uni.edu/theatre/">2/12: TheatreUNI presents: Palette of Possibility, Strayer-Wood Theatre, Sunday, February 12, 2017 - 1:00 pm</a></li>
-								<li>2/12: UNI Women's Basketball vs. Illinois State, McLeod Center, Sunday, February 12, 2017 - 2:00 pm</li>
-								<li>2/12: Art From the Heart, Old Central Ballroom, Maucker Union, Sunday, February 12, 2017 - 2:00 pm</li>
-								<li><a href="https://uni.edu/theatre/">2/12: TheatreUNI presents: Palette of Possibility, Strayer-Wood Theatre, Sunday, February 12, 2017 - 4:00 pm</a></li>
+								<li>ALL WEEK: Darwin Week 2017, University Room, Maucker Union, Monday, February 13, 2017 (All day) to Thursday, February 16, 2017 (All day)</li>
+								<li><a href="http://www.uni.edu/careerservices/events">2/13 ALL DAY: UNI Job and Internship Fair, McLeod Center, Monday, February 13, 2017 (All day)</a></li>
+								<li>2/13: Good in the Nieghborhood: Project Based Learning and Community Outreach Around the Tiny House Movement, Room 378, Rod Library, Monday, February 13, 2017 - 12:00 pm to 1:00 pm</li>
+								<li>2/13: The Reproducibility Crisis in Science, University Room, Maucker Union, Monday, February 13, 2017 - 3:00 pm to 4:00 pm</li>
+								<li><a href="http://www.uni.edu/earth/">2/13: Earth and Environmental Sciences Seminar, Room 125, Latham Hall, Monday, February 13, 2017 - 4:00 pm to 4:50 pm</a></li>
+								<li>2/14: EAP Session #3, Elm Room, Maucker Union, Tuesday, February 14, 2017 - 10:00 am</li>
+								<li>2/14: EAP Session: Enough: Managing Conflict When Things Get Tough, Elm Room, Maucker Union, Tuesday, February 14, 2017 - 10:00 am</li>
+								<li>2/14: Walk the Labyrinth, Rooms 185/187, Wellness Recreation Center, Tuesday, February 14, 2017 - 11:00 am to 2:00 pm</li>
+								<li>2/14: Cheating at UNI: Faculty and Students Perspectives, Room 287, Rod Library, Tuesday, February 14, 2017 - 12:30 pm to 1:30 pm</li>
+								<li><a href="http://www.uni.edu/music/events">2/14: Northern Brass Quintet, Bengtson Auditorium, Russell Hall, Tuesday, February 14, 2017 - 7:30 pm</a></li>
+								<li>2/15: Galentine's Day, Maucker Union, Wednesday, February 15, 2017 - 11:00 am to 1:00 pm</li>
+								<li>2/15: LGBT(ea) Time, LGBT* Center, Maucker Union, Wednesday, February 15, 2017 - 12:00 pm</li>
+								<li>2/15: PAT/History Club Lecture, Room 115, Seerley Hall, Wednesday, February 15, 2017 - 7:00 pm</li>
+								<li>2/15: UNI Men's Basketball vs. Bradley, McLeod Center, Wednesday, February 15, 2017 - 7:00 pm</li>
+								<li><a href="https://unialum.org/events/webinar-networking-build-business-contactsw">2/15: Webinar: Networking to Build Business Contacts, Web (It's Online), Wednesday, February 15, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li>2/15: Citizenship Film Series: Mr. Civil Rights, Auditorium, Center for Energy and Environmental Education, Wednesday, February 15, 2017 - 7:00 pm</li>
+								<li>2/16: CETL Series: Working with Small Groups in the Classroom: CATME Smarter Teamwork: An Online Program for Managing Student Groups, Room 378, Rod Library, Thursday, February 16, 2017 - 12:30 pm to 1:45 pm</li>
+								<li>2/16: Student Body President/Vice President and Senator Debate, Maucker Union, Thursday, February 16, 2017 - 6:30 pm to 8:00 pm</li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/16: Planetarium Show, Room 105, Latham Hall, Thursday, February 16, 2017 - 7:00 pm to 7:40 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/16: Planetarium Show, Room 105, Latham Hall, Thursday, February 16, 2017 - 8:00 pm to 8:40 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">2/17 ALL DAY: Tallcorn Jazz Festival and Sinfonian Dimensions in Jazz Concerts, Bengtson Auditorium, Russell Hall, Friday, February 17, 2017 (All day) to Saturday, February 18, 2017 (All day)</a></li>
+								<li>2/17: "Teachers on Tables": Round Table Disscusion About Teaching Techniques in Language Education, Room 287, Rod Library, Friday, February 17, 2017 - 3:30 pm</li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-718/drumline-live2017.aspx">2/19: Drumline Live, Gallagher Bluedorn Performing Arts Center, Sunday, February 19, 2017 - 2:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
