--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/2-15-class-recap.html">2/15/17 You continued sharing your article annotations and we discussed the relevance of speaking experience.</a></li>
 								<li><a href="html_bucket_class_recaps/2-13-class-recap.html">2/13/17 We discussed Kurt Vonneguts short story and then you all shared your annotations for this week.</a></li>
 								<li><a href="html_bucket_class_recaps/2-10-class-recap.html">2/10/17 We talked about how to evaluate sources a bit and then discussed the results from Wednesday's student services.</a></li>
 								<li><a href="html_bucket_class_recaps/2-6-class-recap.html">2/6/17 Nick opened with a discussion on the rhetorical triangle which lead to us discussing this year's Super Bowl ads.</a></li>
