events page updated for week of 2/20

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 12 February 2017</span>
+                                        <span class="data">Last Updated: 19 February 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -117,29 +117,28 @@
 							 <ul class="tales-list">
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
-								<li>ALL WEEK: Darwin Week 2017, University Room, Maucker Union, Monday, February 13, 2017 (All day) to Thursday, February 16, 2017 (All day)</li>
-								<li><a href="http://www.uni.edu/careerservices/events">2/13 ALL DAY: UNI Job and Internship Fair, McLeod Center, Monday, February 13, 2017 (All day)</a></li>
-								<li>2/13: Good in the Nieghborhood: Project Based Learning and Community Outreach Around the Tiny House Movement, Room 378, Rod Library, Monday, February 13, 2017 - 12:00 pm to 1:00 pm</li>
-								<li>2/13: The Reproducibility Crisis in Science, University Room, Maucker Union, Monday, February 13, 2017 - 3:00 pm to 4:00 pm</li>
-								<li><a href="http://www.uni.edu/earth/">2/13: Earth and Environmental Sciences Seminar, Room 125, Latham Hall, Monday, February 13, 2017 - 4:00 pm to 4:50 pm</a></li>
-								<li>2/14: EAP Session #3, Elm Room, Maucker Union, Tuesday, February 14, 2017 - 10:00 am</li>
-								<li>2/14: EAP Session: Enough: Managing Conflict When Things Get Tough, Elm Room, Maucker Union, Tuesday, February 14, 2017 - 10:00 am</li>
-								<li>2/14: Walk the Labyrinth, Rooms 185/187, Wellness Recreation Center, Tuesday, February 14, 2017 - 11:00 am to 2:00 pm</li>
-								<li>2/14: Cheating at UNI: Faculty and Students Perspectives, Room 287, Rod Library, Tuesday, February 14, 2017 - 12:30 pm to 1:30 pm</li>
-								<li><a href="http://www.uni.edu/music/events">2/14: Northern Brass Quintet, Bengtson Auditorium, Russell Hall, Tuesday, February 14, 2017 - 7:30 pm</a></li>
-								<li>2/15: Galentine's Day, Maucker Union, Wednesday, February 15, 2017 - 11:00 am to 1:00 pm</li>
-								<li>2/15: LGBT(ea) Time, LGBT* Center, Maucker Union, Wednesday, February 15, 2017 - 12:00 pm</li>
-								<li>2/15: PAT/History Club Lecture, Room 115, Seerley Hall, Wednesday, February 15, 2017 - 7:00 pm</li>
-								<li>2/15: UNI Men's Basketball vs. Bradley, McLeod Center, Wednesday, February 15, 2017 - 7:00 pm</li>
-								<li><a href="https://unialum.org/events/webinar-networking-build-business-contactsw">2/15: Webinar: Networking to Build Business Contacts, Web (It's Online), Wednesday, February 15, 2017 - 7:00 pm to 8:00 pm</a></li>
-								<li>2/15: Citizenship Film Series: Mr. Civil Rights, Auditorium, Center for Energy and Environmental Education, Wednesday, February 15, 2017 - 7:00 pm</li>
-								<li>2/16: CETL Series: Working with Small Groups in the Classroom: CATME Smarter Teamwork: An Online Program for Managing Student Groups, Room 378, Rod Library, Thursday, February 16, 2017 - 12:30 pm to 1:45 pm</li>
-								<li>2/16: Student Body President/Vice President and Senator Debate, Maucker Union, Thursday, February 16, 2017 - 6:30 pm to 8:00 pm</li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/16: Planetarium Show, Room 105, Latham Hall, Thursday, February 16, 2017 - 7:00 pm to 7:40 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/16: Planetarium Show, Room 105, Latham Hall, Thursday, February 16, 2017 - 8:00 pm to 8:40 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">2/17 ALL DAY: Tallcorn Jazz Festival and Sinfonian Dimensions in Jazz Concerts, Bengtson Auditorium, Russell Hall, Friday, February 17, 2017 (All day) to Saturday, February 18, 2017 (All day)</a></li>
-								<li>2/17: "Teachers on Tables": Round Table Disscusion About Teaching Techniques in Language Education, Room 287, Rod Library, Friday, February 17, 2017 - 3:30 pm</li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-718/drumline-live2017.aspx">2/19: Drumline Live, Gallagher Bluedorn Performing Arts Center, Sunday, February 19, 2017 - 2:00 pm</a></li>
+								<li><a href="https://uni.edu/finaid/live-like-a-student">ALL WEEK: Live Like a Student classes, Room 324, Rod Library, Monday, February 20, 2017 - 8:00 am to Thursday, March 9, 2017 - 5:00 pm</a></li>
+								<li>2/20: Wakonse Teaching Conference Information Session, Room 378, Rod Library, Monday, February 20, 2017 - 2:00 pm to 3:00 pm</li>
+								<li>2/20: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, February 20, 2017 - 5:00 pm</li>
+								<li>2/20: Diversity Colloquium: Men of Color, Mental Health, and the Correctional System, Scholar Space, Rod Library, Monday, February 20, 2017 - 7:00 pm</li>
+								<li>2/20: Diversity Colloquium: Men of Color, Mental Health, and the Correctional System, Rod Library 301, Monday, February 20, 2017 - 7:00 pm to 8:30 pm</li>
+								<li><a href="http://www.uni.edu/music/events">2/20: Guest Recital: David Gompper, composer and pianist &amp; Wolfgang David, violinist, Davis Hall, GBPAC, Monday, February 20, 2017 - 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">2/21: UNI Suzuki School Faculty Recital, Davis Hall, GBPAC, Tuesday, February 21, 2017 - 6:00 pm</a></li>
+								<li>2/21: Artist Lecture: Sunkoo Yuh, UNI Department of Art, KAB 111, Tuesday, February 21, 2017 - 7:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events">2/21: Jazz Combos Concert, Bengtson Auditorium, Russell Hall, Tuesday, February 21, 2017 - 8:00 pm</a></li>
+								<li><a href="https://docs.google.com/a/uni.edu/forms/d/e/1FAIpQLSdP9Gy9te97WjdsXyx2kMNt5_Y0AmqSfnYZWVUHB44IfoHuXg/viewform?formkey=dER3bFBxQ3">2/22: UNI Business- John Deere Supply Chain Forum, Slife Ballroom, Commons, Wednesday, February 22, 2017 - 8:30 am</a></li>
+								<li><a href="https://www.eventbrite.com/e/ncbi-leadership-for-diversity-inclusion-workshops-registration-16885929269">2/22: UNI-NCBI Leadership for Diversity and Inclusion Workshop, Room 301, Rod Library, Wednesday, February 22, 2017 -9:00 am to 4:00 pm</a></li>
+								<li><a href="https://unialum.org/events/webinar-7-keys-successful-job-search-midlife-jobseekesr">2/22: Webinar: 7 Keys to a Successful Job Search for Midlife Jobseekers, Web (It's Online), Wednesday, February 22, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li>2/23: Spring Academic Advisor Workshop, University Room, Maucker Union, Thursday, February 23, 2017 - 2:00 pm to 4:00 pm</li>
+								<li>2/23: Quick and Easy Strategies for Classroom Discussion, Room 378, Rod Library, Thursday, February 23, 2017 - 3:30 pm to 4:30 pm</li>
+								<li>2/23: Psychology Club meeting, Room 320, Curris Business Building, Thursday, February 23, 2017 - 6:00 pm</li>
+								<li><a href="https://uni.edu/langlit/news/final-thursday-reading-series-back-2017">2/23: Final Thursday Reading Series featuring Rachel Morgan, Hearst Center for the Arts, Thursday, February 23, 2017 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/23: Planetarium Show, Room 105, Latham Hall, Thursday, February 23, 2017 - 7:00 pm to 7:40 pm</a></li>
+								<li>2/23: Spotlight Series: Northern Iowa Symphony Orchestra with guests, Great Hall, GBPAC, Thursday, February 23, 2017 - 7:30 pm</li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/23: Planetarium Show, Room 105, Latham Hall, Thursday, February 23, 2017 - 8:00 pm to 8:40 pm</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-734/jack-hanna.aspx">2/24: Jack Hanna's Into The Wild Live Presented By Nationwide, Gallagher Bluedorn Performing Arts Center, Friday, February 24, 2017 - 7:00 pm</a></li>
+								<li><a href="http://www.cedarvalleyrobotweek.com/tours">2/25: Robots of Innovation in Textiles and Apparel - Cedar Valley Robot Week, Second floor, Latham Hall, Saturday, February 25, 2017 - 10:00 am to 12:00 pm</a></li>
+								<li>2/25: Cedar Valley Connect and Engage Fair, Center for Energy and Environmental Education, Saturday, February 25, 2017 - 2:00 pm to 5:00 pm</li>
                             </ul>
 						</div>
                     </article>
