--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 17 February 2017</span>
+                                        <span class="data">Last Updated: 20 February 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/2-20-class-recap.html">2/20/17 We discussed proficiency vs growth in the educational system and talked about the objective of this semester.</a></li>
 								<li><a href="html_bucket_class_recaps/2-17-class-recap.html">2/17/17 Today we discussed Valentine's Day for a bit. We talked about its history and why some of you hate it.</a></li>
 								<li><a href="html_bucket_class_recaps/2-15-class-recap.html">2/15/17 You continued sharing your article annotations and we discussed the relevance of speaking experience.</a></li>
 								<li><a href="html_bucket_class_recaps/2-13-class-recap.html">2/13/17 We discussed Kurt Vonneguts short story and then you all shared your annotations for this week.</a></li>
