--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 22 February 2017</span>
+                                        <span class="data">Last Updated: 24 February 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/2-24-class-recap.html">2/24/17 You all spent the entire class working on your group projects. They seem to be coming along nicely!</a></li>
 								<li><a href="html_bucket_class_recaps/2-22-class-recap.html">2/22/17 We talked about what it takes to deliver an A level speech. Nick also adressed some grading questions.</a></li>
 								<li><a href="html_bucket_class_recaps/2-20-class-recap.html">2/20/17 We discussed proficiency vs growth in the educational system and talked about the objective of this semester.</a></li>
 								<li><a href="html_bucket_class_recaps/2-17-class-recap.html">2/17/17 Today we discussed Valentine's Day for a bit. We talked about its history and why some of you hate it.</a></li>
