--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 19 February 2017</span>
+                                        <span class="data">Last Updated: 25 February 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -118,27 +118,39 @@
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
 								<li><a href="https://uni.edu/finaid/live-like-a-student">ALL WEEK: Live Like a Student classes, Room 324, Rod Library, Monday, February 20, 2017 - 8:00 am to Thursday, March 9, 2017 - 5:00 pm</a></li>
-								<li>2/20: Wakonse Teaching Conference Information Session, Room 378, Rod Library, Monday, February 20, 2017 - 2:00 pm to 3:00 pm</li>
-								<li>2/20: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, February 20, 2017 - 5:00 pm</li>
-								<li>2/20: Diversity Colloquium: Men of Color, Mental Health, and the Correctional System, Scholar Space, Rod Library, Monday, February 20, 2017 - 7:00 pm</li>
-								<li>2/20: Diversity Colloquium: Men of Color, Mental Health, and the Correctional System, Rod Library 301, Monday, February 20, 2017 - 7:00 pm to 8:30 pm</li>
-								<li><a href="http://www.uni.edu/music/events">2/20: Guest Recital: David Gompper, composer and pianist &amp; Wolfgang David, violinist, Davis Hall, GBPAC, Monday, February 20, 2017 - 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">2/21: UNI Suzuki School Faculty Recital, Davis Hall, GBPAC, Tuesday, February 21, 2017 - 6:00 pm</a></li>
-								<li>2/21: Artist Lecture: Sunkoo Yuh, UNI Department of Art, KAB 111, Tuesday, February 21, 2017 - 7:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events">2/21: Jazz Combos Concert, Bengtson Auditorium, Russell Hall, Tuesday, February 21, 2017 - 8:00 pm</a></li>
-								<li><a href="https://docs.google.com/a/uni.edu/forms/d/e/1FAIpQLSdP9Gy9te97WjdsXyx2kMNt5_Y0AmqSfnYZWVUHB44IfoHuXg/viewform?formkey=dER3bFBxQ3">2/22: UNI Business- John Deere Supply Chain Forum, Slife Ballroom, Commons, Wednesday, February 22, 2017 - 8:30 am</a></li>
-								<li><a href="https://www.eventbrite.com/e/ncbi-leadership-for-diversity-inclusion-workshops-registration-16885929269">2/22: UNI-NCBI Leadership for Diversity and Inclusion Workshop, Room 301, Rod Library, Wednesday, February 22, 2017 -9:00 am to 4:00 pm</a></li>
-								<li><a href="https://unialum.org/events/webinar-7-keys-successful-job-search-midlife-jobseekesr">2/22: Webinar: 7 Keys to a Successful Job Search for Midlife Jobseekers, Web (It's Online), Wednesday, February 22, 2017 - 7:00 pm to 8:00 pm</a></li>
-								<li>2/23: Spring Academic Advisor Workshop, University Room, Maucker Union, Thursday, February 23, 2017 - 2:00 pm to 4:00 pm</li>
-								<li>2/23: Quick and Easy Strategies for Classroom Discussion, Room 378, Rod Library, Thursday, February 23, 2017 - 3:30 pm to 4:30 pm</li>
-								<li>2/23: Psychology Club meeting, Room 320, Curris Business Building, Thursday, February 23, 2017 - 6:00 pm</li>
-								<li><a href="https://uni.edu/langlit/news/final-thursday-reading-series-back-2017">2/23: Final Thursday Reading Series featuring Rachel Morgan, Hearst Center for the Arts, Thursday, February 23, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/23: Planetarium Show, Room 105, Latham Hall, Thursday, February 23, 2017 - 7:00 pm to 7:40 pm</a></li>
-								<li>2/23: Spotlight Series: Northern Iowa Symphony Orchestra with guests, Great Hall, GBPAC, Thursday, February 23, 2017 - 7:30 pm</li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/23: Planetarium Show, Room 105, Latham Hall, Thursday, February 23, 2017 - 8:00 pm to 8:40 pm</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-734/jack-hanna.aspx">2/24: Jack Hanna's Into The Wild Live Presented By Nationwide, Gallagher Bluedorn Performing Arts Center, Friday, February 24, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.cedarvalleyrobotweek.com/tours">2/25: Robots of Innovation in Textiles and Apparel - Cedar Valley Robot Week, Second floor, Latham Hall, Saturday, February 25, 2017 - 10:00 am to 12:00 pm</a></li>
-								<li>2/25: Cedar Valley Connect and Engage Fair, Center for Energy and Environmental Education, Saturday, February 25, 2017 - 2:00 pm to 5:00 pm</li>
+								<li>2/27: Green Zone Training, State College Room, Maucker Union, Monday, February 27, 2017 - 1:00 pm to 2:30 pm</li>
+								<li>2/27: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, February 27, 2017 - 5:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events">2/27: UNI Concert Band, Great Hall, GBPAC, Monday, February 27, 2017 - 7:30 pm</a></li>
+								<li><a href="https://studentwellness.uni.edu/sites/default/files/youniquely_beautiful_week_promotion.pdf">2/28: Youniquely Beautiful Week eating disorder panel, Room 109, Curris Business Building, Tuesday, February 28, 2017 - 6:00 pm to 7:30 pm</a></li>
+								<li><a href="https://advising.uni.edu/spotlight">2/28: Major Spotlight, Lower level meeting rooms, Maucker Union, Tuesday, February 28, 2017 - 6:30 pm</a></li>
+								<li><a href="https://www.facebook.com/events/1927303874166299/">2/28: In Formation: What Beyonce Can Teach Us About Race and Religion in America, Room 115, Seerley Hall, Tuesday, February 28, 2017 - 6:30 pm</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-719/mamma-mia.aspx">2/28: Mamma Mia!, Gallagher Bluedorn Performing Arts Center, Tuesday, February 28, 2017 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">2/28: UNI Flute Choir and Flute Studio Concert, Davis Hall, GBPAC, Tuesday, February 28, 2017 - 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/art/gallery.html">3/1: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/art/gallery.html">3/1: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
+								<li>3/1: Spring 2017 Graduation Fair, Old Central Ballroom, Maucker Union, Wednesday, March 1, 2017 - 10:00 am to 6:00 pm</li>
+								<li>3/1: Chicago Memories, Rod Library, Learning Commons (Main Floor), Wednesday, March 1, 2017 - 4:00 pm</li>
+								<li><a href="https://unialum.org/events/webinar-how-build-your-brand-online">3/1: Webinar: How to Build Your Brand Online, Web (It's Online), Wednesday, February March 1st, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">3/1: Guest Recital: Margarita Shevchenko, piano, Davis Hall, GBPAC, Wednesday, March 1, 2017 - 8:00 pm</a></li>
+								<li><a href="https://uni.edu/chemistry/seminar-schedule">3/2: Chemistry and Biochemistry Department Seminar, Room 201, McCollum Science Hall, Thursday, March 2, 2017 - 4:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">3/2: Faculty Recital: Matthew Andreini, percussion, Davis Hall, GBPAC, Thursday, March 2, 2017 - 6:00 pm</a></li>
+								<li><a href="https://uni.edu/chemistry/about-leland-wilson-lectureship">3/2: Leland Wilson Lecture, Lantz Auditorium, McCollum Science Hall, Thursday, March 2, 2017 - 6:00 pm</a></li>
+								<li>3/2: UNI Women's Basketball vs. Wichita State, McLeod Center, Thursday, March 2, 2017 - 7:00 pm</li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">3/2: Planetarium Show, Room 105, Latham Hall, Thursday, March 2, 2017 - 7:00 pm to 7:40 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">3/2: Concert Chorale, Varsity Men's Glee Club and UNI Singers, Great Hall, GBPAC, Thursday, March 2, 2017 - 7:30 pm</a></li>
+								<li>3/2: UNI Interpreters Theatre presents 'Boys Will Be Boys', Room 040, Lang Hall, Thursday, March 2, 2017 - 7:30 pm</li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">3/2: Planetarium Show, Room 105, Latham Hall, Thursday, March 2, 2017 - 8:00 pm to 8:40 pm</a></li>
+								<li>3/3: A Clockwork Orange (Man): Re-thinking Rhetoric in an Era of Fake News, Room 378, Rod Library, Friday, March 3, 2017 - 12:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events">3/3: Northern Iowa Bach Cantata Series Performance, McElroy Lobby, GBPAC, Friday, March 3, 2017 - 12:15 pm</a></li>
+								<li>3/3: WGS 40th Anniversary Celebration, Center for Multicultural Education, Friday, March 3, 2017 - 5:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events">3/3: Guest Recital: Annette Richards, organ, Jebe Hall, GBPAC, Friday, March 3, 2017 - 6:00 pm</a></li>
+								<li>3/3: UNI Interpreters Theatre presents 'Boys Will Be Boys', Room 040, Lang Hall, Friday, March 3, 2017 - 7:30 pm</li>
+								<li>3/4: Mid-American Conference Wrestling Championships, McLeod Center, Saturday, March 4, 2017 (All day)</li>
+								<li><a href="http://www.uni.edu/music/events">3/4: Midwest Keyboard Pedagogy Festival, Jebe Hall, GBPAC, Saturday, March 4, 2017 (All day)</a></li>
+								<li>3/4: UNI Women's Basketball vs. Missouri State, McLeod Center, Saturday, March 4, 2017 - Time TBD</li>
+								<li><a href="http://www.unidancemarathon.com/big-event">3/4: UNI Dance Marathon Big Event, Maucker Union, Saturday, March 4, 2017 - 12:00 pm to Sunday, March 5, 2017 - 12:00 am</a></li>
+								<li>3/4: UNI Interpreters Theatre presents 'Boys Will Be Boys', Room 040, Lang Hall, Saturday, March 4, 2017 - 7:30 pm</li>
+								<li>3/5: Mid-American Conference Wrestling Championships, McLeod Center, Sunday, March 5, 2017 (All day)</li>
                             </ul>
 						</div>
                     </article>
