--- a/html_bucket_indexed_homepages/index-posts-65-68.html
+++ b/html_bucket_indexed_homepages/index-posts-65-68.html
@@ -163,7 +163,7 @@
                         </div>
 					</div>
 					
-					 <!-- NAV-BUTTON-FLAG -->  <div class="paging"> <a href="../index.html" class="newer"><i class="fa fa-long-arrow-left"> </i> Newer</a> <span>&bull;</span>  <a href="../html_bucket_indexed_homepages/index-posts-61-64.html" class="older">Older <i class="fa fa-long-arrow-right"></i></a> </div> <!-- NAV-BUTTON-FLAG -->
+					 <!-- NAV-BUTTON-FLAG -->  <div class="paging"> <a href="../html_bucket_indexed_homepages/index-posts-69-72.html" class="newer"><i class="fa fa-long-arrow-left"> </i> Newer</a> <span>&bull;</span>  <a href="../html_bucket_indexed_homepages/index-posts-61-64.html" class="older">Older <i class="fa fa-long-arrow-right"></i></a> </div> <!-- NAV-BUTTON-FLAG -->
                 </div>
 				
                 <aside class="col-md-4 blog-aside">
