updated story link

--- a/html_bucket_class_recaps/2-27-class-recap.html
+++ b/html_bucket_class_recaps/2-27-class-recap.html
@@ -126,7 +126,7 @@
 							<br><br>After the speech, Nick read his story "What are you laughing at" about children with disabilities. After writing for a few minutes about your thoughts, 
 							you all then divided into groups and discussed the story. As I walked around assisting everyone it seemed like most of you guys liked the story, so that was good. Nick announced as you guys were 
 							leaving that if you wanted extra credit you could e-mail him for the story and do a rundown-like write up of it. This would be an easy way for a check plus. 
-							Hopefully, I can get the PDF from him so I can post it here! -- this isn't done yet--
+							Here is the story in PDF form if you're interested! <a href="../pdf/what-are-you-laughing-at.pdf">--Here--</a></b>
 							
 							<br><br>Anyway, Next time we will be doing pop speeches on teenage drinking. This is to get you all in front of the classroom once more before your speeches roll around. 
 							You'll be working in groups and trying to come up with a solution/alternative to underage drinking.
