--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 1 March 2017</span>
+                                        <span class="data">Last Updated: 7 March 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/3-6-class-recap.html">3/6/17 We discussed smoking cigarettes vs drinking alcohol and talked about underage drinking some more.</a></li>
 								<li><a href="html_bucket_class_recaps/3-1-class-recap.html">3/1/17 You all spent the class working in groups to solve the underage drinking problem.</a></li>
 								<li><a href="html_bucket_class_recaps/2-27-class-recap.html">2/27/17 Today we had our first individual speech and we spent some time in groups discussing a story Nick read.</a></li>
 								<li><a href="html_bucket_class_recaps/2-24-class-recap.html">2/24/17 You all spent the entire class working on your group projects. They seem to be coming along nicely!</a></li>
