events page put on the backburner till spring break

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 25 February 2017</span>
+                                        <span class="data">Last Updated: 7 March 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,44 +113,10 @@
 								which you are more than welcome to use for your campus engagements. If you have any questions about times/locations feel free to
 								contact me and I'll help you find the answers! (Some events don't have links). It's also worth noting that there are many more events you
 								could go to that would count. So feel free to attend something not on the list!
+								
+								<b>THIS PAGE WON'T BE UPDATED AGAIN UNTIL AFTER SPRING BREAK. ENJOY YOUR BREAK KIDDOS.</b>
 							 </p>
 							 <ul class="tales-list">
-								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
-								<li><a href="https://uni.edu/finaid/live-like-a-student">ALL WEEK: Live Like a Student classes, Room 324, Rod Library, Monday, February 20, 2017 - 8:00 am to Thursday, March 9, 2017 - 5:00 pm</a></li>
-								<li>2/27: Green Zone Training, State College Room, Maucker Union, Monday, February 27, 2017 - 1:00 pm to 2:30 pm</li>
-								<li>2/27: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, February 27, 2017 - 5:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events">2/27: UNI Concert Band, Great Hall, GBPAC, Monday, February 27, 2017 - 7:30 pm</a></li>
-								<li><a href="https://studentwellness.uni.edu/sites/default/files/youniquely_beautiful_week_promotion.pdf">2/28: Youniquely Beautiful Week eating disorder panel, Room 109, Curris Business Building, Tuesday, February 28, 2017 - 6:00 pm to 7:30 pm</a></li>
-								<li><a href="https://advising.uni.edu/spotlight">2/28: Major Spotlight, Lower level meeting rooms, Maucker Union, Tuesday, February 28, 2017 - 6:30 pm</a></li>
-								<li><a href="https://www.facebook.com/events/1927303874166299/">2/28: In Formation: What Beyonce Can Teach Us About Race and Religion in America, Room 115, Seerley Hall, Tuesday, February 28, 2017 - 6:30 pm</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-719/mamma-mia.aspx">2/28: Mamma Mia!, Gallagher Bluedorn Performing Arts Center, Tuesday, February 28, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">2/28: UNI Flute Choir and Flute Studio Concert, Davis Hall, GBPAC, Tuesday, February 28, 2017 - 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/art/gallery.html">3/1: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/art/gallery.html">3/1: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
-								<li>3/1: Spring 2017 Graduation Fair, Old Central Ballroom, Maucker Union, Wednesday, March 1, 2017 - 10:00 am to 6:00 pm</li>
-								<li>3/1: Chicago Memories, Rod Library, Learning Commons (Main Floor), Wednesday, March 1, 2017 - 4:00 pm</li>
-								<li><a href="https://unialum.org/events/webinar-how-build-your-brand-online">3/1: Webinar: How to Build Your Brand Online, Web (It's Online), Wednesday, February March 1st, 2017 - 7:00 pm to 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">3/1: Guest Recital: Margarita Shevchenko, piano, Davis Hall, GBPAC, Wednesday, March 1, 2017 - 8:00 pm</a></li>
-								<li><a href="https://uni.edu/chemistry/seminar-schedule">3/2: Chemistry and Biochemistry Department Seminar, Room 201, McCollum Science Hall, Thursday, March 2, 2017 - 4:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">3/2: Faculty Recital: Matthew Andreini, percussion, Davis Hall, GBPAC, Thursday, March 2, 2017 - 6:00 pm</a></li>
-								<li><a href="https://uni.edu/chemistry/about-leland-wilson-lectureship">3/2: Leland Wilson Lecture, Lantz Auditorium, McCollum Science Hall, Thursday, March 2, 2017 - 6:00 pm</a></li>
-								<li>3/2: UNI Women's Basketball vs. Wichita State, McLeod Center, Thursday, March 2, 2017 - 7:00 pm</li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">3/2: Planetarium Show, Room 105, Latham Hall, Thursday, March 2, 2017 - 7:00 pm to 7:40 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">3/2: Concert Chorale, Varsity Men's Glee Club and UNI Singers, Great Hall, GBPAC, Thursday, March 2, 2017 - 7:30 pm</a></li>
-								<li>3/2: UNI Interpreters Theatre presents 'Boys Will Be Boys', Room 040, Lang Hall, Thursday, March 2, 2017 - 7:30 pm</li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">3/2: Planetarium Show, Room 105, Latham Hall, Thursday, March 2, 2017 - 8:00 pm to 8:40 pm</a></li>
-								<li>3/3: A Clockwork Orange (Man): Re-thinking Rhetoric in an Era of Fake News, Room 378, Rod Library, Friday, March 3, 2017 - 12:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events">3/3: Northern Iowa Bach Cantata Series Performance, McElroy Lobby, GBPAC, Friday, March 3, 2017 - 12:15 pm</a></li>
-								<li>3/3: WGS 40th Anniversary Celebration, Center for Multicultural Education, Friday, March 3, 2017 - 5:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events">3/3: Guest Recital: Annette Richards, organ, Jebe Hall, GBPAC, Friday, March 3, 2017 - 6:00 pm</a></li>
-								<li>3/3: UNI Interpreters Theatre presents 'Boys Will Be Boys', Room 040, Lang Hall, Friday, March 3, 2017 - 7:30 pm</li>
-								<li>3/4: Mid-American Conference Wrestling Championships, McLeod Center, Saturday, March 4, 2017 (All day)</li>
-								<li><a href="http://www.uni.edu/music/events">3/4: Midwest Keyboard Pedagogy Festival, Jebe Hall, GBPAC, Saturday, March 4, 2017 (All day)</a></li>
-								<li>3/4: UNI Women's Basketball vs. Missouri State, McLeod Center, Saturday, March 4, 2017 - Time TBD</li>
-								<li><a href="http://www.unidancemarathon.com/big-event">3/4: UNI Dance Marathon Big Event, Maucker Union, Saturday, March 4, 2017 - 12:00 pm to Sunday, March 5, 2017 - 12:00 am</a></li>
-								<li>3/4: UNI Interpreters Theatre presents 'Boys Will Be Boys', Room 040, Lang Hall, Saturday, March 4, 2017 - 7:30 pm</li>
-								<li>3/5: Mid-American Conference Wrestling Championships, McLeod Center, Sunday, March 5, 2017 (All day)</li>
                             </ul>
 						</div>
                     </article>
