update directory glitch

--- a/html_bucket_indexed_homepages/index-posts-73-76.html
+++ b/html_bucket_indexed_homepages/index-posts-73-76.html
@@ -94,8 +94,8 @@
 						<div class="col-md-6 col-sm-6">
                             <article class=" blog-teaser">
                                 <header>
-                                    <img src="img/3-6-recap-icon.png" alt="3/6 class recap">   <!-- Files ideally should be 123 x 123 px for thumbnails -->
-                                    <h3><a href="html_bucket_class_recaps/3-6-class-recap.html">Monday 3/6 Recap</a></a></h3>
+                                    <img src="../img/3-6-recap-icon.png" alt="3/6 class recap">   <!-- Files ideally should be 123 x 123 px for thumbnails -->
+                                    <h3><a href="../html_bucket_class_recaps/3-6-class-recap.html">Monday 3/6 Recap</a></a></h3>
                                     <span class="meta">7 March 2017, Justice Adams</span>
 									<hr>
                                 </header>
@@ -103,7 +103,7 @@
                                 <div class="body">
 									We discussed the negative social stigma associated with smoking cigarettes and then we talked a bit about adulthood.
                                 <div class="clearfix">
-                                    <h3><a href="html_bucket_class_recaps/3-6-class-recap.html" class="btn btn-tales-one">Read More</a>
+                                    <h3><a href="../html_bucket_class_recaps/3-6-class-recap.html" class="btn btn-tales-one">Read More</a>
                                 </div>
                             </article>
                         </div>
