updated events page for week of 2/20

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 7 March 2017</span>
+                                        <span class="data">Last Updated: 19 March 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,10 +113,32 @@
 								which you are more than welcome to use for your campus engagements. If you have any questions about times/locations feel free to
 								contact me and I'll help you find the answers! (Some events don't have links). It's also worth noting that there are many more events you
 								could go to that would count. So feel free to attend something not on the list!
-								
-								<b>THIS PAGE WON'T BE UPDATED AGAIN UNTIL AFTER SPRING BREAK. ENJOY YOUR BREAK KIDDOS.</b>
 							 </p>
 							 <ul class="tales-list">
+							 	<li><a href="https://music.uni.edu/events/festivals-workshops-and-camps/midwest-international-conducting-symposium">ALL WEEK: Midwest International Conducting Symposium, Russell Hall &amp; GBPAC, Saturday, March 18, 2017 (All day) to Friday, March 24, 2017 (All day)</a></li>
+								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Annual Juried Student Art Exhibition", UNI Gallery of Art, Kamerick Art Building, Monday, March 20, 2017 - 7:00 pm to Saturday, April 15, 2017 - 5:00 pm</a></li>
+								<li>2/20: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, March 20, 2017 - 5:00 pm</li>
+								<li><a href="http://www.uni.edu/art/gallery.html">2/20: "Annual Juried Student Art Exhibition", UNI Gallery of Art, Kamerick Art Building, Monday, March 20, 2017 - 7:00 pm to Saturday, April 15, 2017 - 5:00 pm</a></li>
+								<li>2/21: Teaching for Diversity and Inclusion Faculty Learning Community Interest Meeting, Room 378, Rod Library, Tuesday, March 21, 2017 - 12:30 pm</li>
+								<li><a href="https://music.uni.edu/events">2/21: Guest Recital: Geoff Durbin, euphonium, Davis Hall, GBPAC, Tuesday, March 21, 2017 - 6:00 pm</a></li>
+								<li>2/21: Diversity Colloquium: Immigrant Communities in the Cedar Valley, Scholar Space, Rod Library, Tuesday, March 21, 2017 - 7:00 pm</li>
+								<li>2/21: Diversity Colloquium: Immigrant Communities in the Cedar Valley, Room 301, Rod Library, Tuesday, March 21, 2017 - 7:00 pm</li>
+								<li><a href="https://music.uni.edu/events">2/21: Guest Recital: Adam Larson Quartet, Davis Hall, GBPAC, Tuesday, March 21, 2017 - 8:00 pm</a></li>
+								<li>2/22: LGBT(ea) Time, LGBT* Center, Maucker Union, Wednesday, March 22, 2017 - 12:00 pm</li>
+								<li><a href="https://teachered.uni.edu/teacher-education-induction-ceremony-convocation">2/22: UNI Teacher Education Induction Convocation, Great Hall, GBPAC, Wednesday, March 22, 2017 - 4:00 pm</a></li>
+								<li>2/22: PAT/History Club Lecture, Room 115, Seerley Hall, Wednesday, March 22, 2017 - 7:00 pm</li>
+								<li><a href="https://unialum.org/events/webinar-boomerangs-engaging-aging-workforce-america">2/22: Webinar: BOOMERangs - Engaging the Aging Workforce in America, Web (It's online), Wednesday, March 22, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li>2/23 ALL DAY: FIRST Robotics Competition (FRC) Iowa Regional, McLeod Center, Thursday, March 23, 2017 (All day) to Saturday, March 25, 2017 (All day)</li>
+								<li><a href="https://music.uni.edu/events">2/23 ALL DAY: Northern Iowa Band Invitational, Davis Hall, GBPAC, Thursday, March 23, 2017 (All day)</a></li>
+								<li><a href="https://www.eventbrite.com/e/ncbi-leadership-for-diversity-inclusion-workshops-registration-16885929269">2/23: UNI-NCBI Leadership for Diversity and Inclusion Workshop, Room 301, Rod Library, Thursday, March 23, 2017 - 9:00 am to 4:00 pm</a></li>
+								<li><a href="https://chemistry.uni.edu/seminar-schedule">2/23: Chemistry and Biochemistry Department Seminar, Room 201, McCollum Science Hall, Thursday, March 23, 2017 - 4:00 pm</a></li>
+								<li>2/23: Joseph Scapellato fiction reading, Room 0081, Bartlett Hall, Thursday, March 23, 2017 - 7:00 pm</li>
+								<li><a href="https://music.uni.edu/events">2/23: Guest Recital: Music of Harvey Sollberger for Flutes, Davis Hall, GBPAC, Thursday, March 23, 2017 - 8:00 pm</a></li>
+								<li><a href="https://earth.uni.edu/content/observatory-visit">2/23: Observatory Show, Room 137, McCollum Science Hall, Thursday, March 23, 2017 - 9:00 pm to 10:00 pm</a></li>
+								<li>2/24: Green Zone Training, State College Room, Maucker Union, Friday, March 24, 2017 - 1:00 pm to 2:30 pm</li>
+								<li><a href="https://music.uni.edu/events">2/24: Faculty Recital: Heather Peyton, oboe, Davis Hall, GBPAC, Friday, March 24, 2017 - 6:00 pm</a></li>
+								<li>2/24: [your response matters], Room 040, Lang Hall, Friday, March 24, 2017 - 7:30 pm</li>
+								<li><a href="https://www.facebook.com/events/1898159090427821/">2/25: Panther Gaming Convention, Gallagher Bluedorn Performing Arts Center, Saturday, March 25, 2017 - 10:00 am to 10:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
