--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 17 March 2017</span>
+                                        <span class="data">Last Updated: 20 March 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/3-20-class-recap.html">3/20/17 Our first class back from spring break! We had two speeches. One on sleep, and one about sports.</a></li>
 								<li><a href="html_bucket_class_recaps/3-8-class-recap.html">3/8/17 We had a speech on valentine's day and then chose the dates for group speeches.</a></li>
 								<li><a href="html_bucket_class_recaps/3-6-class-recap.html">3/6/17 We discussed smoking cigarettes vs drinking alcohol and talked about underage drinking some more.</a></li>
 								<li><a href="html_bucket_class_recaps/3-1-class-recap.html">3/1/17 You all spent the class working in groups to solve the underage drinking problem.</a></li>
